--- a/101381171-lab-test2-comp3133/src/app/missionlist/missionlist.component.css
+++ b/101381171-lab-test2-comp3133/src/app/missionlist/missionlist.component.css
@@ -1,35 +1,39 @@
+.flightName {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 .flightdataBox {
-    display: flex; /* Use flexbox to arrange items */
-    align-items: center; /* Align items vertically in the center */
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    padding: 20px; /* Add padding for spacing */
-    border-radius: 8px; /* Add border radius for rounded corners */
-    background-color: #f0f6ff; /* Change background color to light blue */
-    margin-bottom: 20px; /* Add margin bottom for spacing between flights */
+    box-shadow: rgba(36, 90, 144, 0.2) 0px 8px 24px;
+    width: 25%;
+    padding: 1%;
+    margin: 1%;
 }
 
 .flightdataBox img {
-    max-width: 200px; /* Set a fixed width for the image */
-    margin-right: 20px; /* Add margin between image and text */
+    width: 100%;
 }
 
-.input[type="text"] {
+input[type="text"] {
     margin-left: 10%;
     width: 80%;
     padding: 10px;
-    border: 1px solid #cccccc;
+    border: 1px solid #615c5c;
     border-radius: 4px;
     box-sizing: border-box;
     font-size: 14px;
 }
 
-.input[type="text"]:focus {
+/* Focus state for text input */
+input[type="text"]:focus {
     outline: none;
-    border-color: #ff0051;
-    box-shadow: 0 0 5px rgba(242, 0, 255, 0.5);
+    border-color: #007bff;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
 
-.input[type="text"]:disabled {
+
+input[type="text"]:disabled {
     opacity: 0.5;
     cursor: not-allowed;
 }
