--- a/101381171-lab-test2-comp3133/src/app/missionlist/missionlist.component.html
+++ b/101381171-lab-test2-comp3133/src/app/missionlist/missionlist.component.html
@@ -1,4 +1,4 @@
-<input type="text" (input)="getInput($event)"  placeholder="Search by year"/>
+<input type="text" (input)="getinput($event)"  placeholder="Search by year"/>
 <div class="flightName">
 
 
@@ -17,7 +17,7 @@
 
   <h3>Mission Name : {{ flight.mission_name}}</h3>
   <h4>Launch Year : {{ flight.launch_year}}</h4>
-  <h4>Sucessful Lunch : {{ flight.launch_success ? "Yes" : "No"}}</h4>
+  <h4>Sucessful Lunch : {{ flight.launch_success ? "Success" : "Failure"}}</h4>
 </a>
 
 </div>
